<resources>
    <string name="app_name">Hermes</string>

    <string name="mqtt_title">Hermes订阅</string>
    <string name="mqtt_service_title">Hermes后台服务订阅</string>
    <string name="mqtt_create">创建</string>
    <string name="mqtt_release">释放</string>
    <string name="mqtt_connect">连接</string>
    <string name="mqtt_connect_info_title">连接信息</string>
    <string name="mqtt_url_hint">请输入ip和端口号</string>
    <string name="mqtt_client_id_hint">请输入客户端id</string>
    <string name="mqtt_def_sub_topic_hint">请输入默认订阅主题</string>
    <string name="mqtt_sub_topic_hint">请输入订阅主题名称（多个用英文,隔开）</string>
    <string name="mqtt_remove_topic_hint">请输入移除的主题名称（多个用英文,隔开）</string>
    <string name="mqtt_send_info_title">发送数据到服务端</string>
    <string name="mqtt_send">发送</string>
    <string name="mqtt_send_topic_hint">请输入主题</string>
    <string name="mqtt_send_hint">请输入内容</string>
    <string name="mqtt_clean">清空</string>
    <string name="mqtt_disconnect">断开</string>
    <string name="mqtt_confirm">确定</string>
    <string name="mqtt_silent_config_title">是否静默</string>
    <string name="mqtt_notify_config_title">是否通知栏提醒</string>
    <string name="mqtt_silent">静默（不提醒消息）</string>
    <string name="mqtt_unsilent">非静默（正常提醒）</string>
    <string name="mqtt_dynamic_sub_title">动态订阅</string>
    <string name="mqtt_sub_topic">订阅</string>
    <string name="mqtt_remove_topic">删除订阅</string>
    <string name="mqtt_url_empty">ip和端口号不能为空</string>
    <string name="mqtt_client_already_create">请先释放再创建</string>
    <string name="mqtt_client_no_create">您尚未创建</string>
    <string name="mqtt_client_id_empty">客户端id不能为空</string>
    <string name="mqtt_sub_topic_empty">默认订阅主题不能为空</string>
    <string name="mqtt_send_topic_empty">发送主题不能为空</string>
    <string name="mqtt_add_topic_empty">添加主题不能为空</string>
    <string name="mqtt_remove_topic_empty">移除主题不能为空</string>
    <string name="mqtt_send_content_empty">发送内容不能为空</string>
    <string name="mqtt_client_unconnected">请先连接服务端</string>
    <string name="mqtt_already_connect">已连接</string>
    <string name="mqtt_already_disconnect">已断开</string>
    <string name="mqtt_github">Github：https://github.com/eclipse/paho.mqtt.android</string>
    <string name="mqtt_foreground_service_title">Hermes消息订阅</string>
    <string name="mqtt_foreground_service_content">消息中心正在为您服务</string>

    <string name="ws_title">WebSocket客户端长连接</string>
    <string name="ws_github">Github：https://github.com/TooTallNate/Java-WebSocket</string>
    <string name="ws_already_connect">已连接</string>

    <string name="ws_server_title">WebSocket服务端</string>
    <string name="ws_server_test">WS在线连接测试：http://www.websocket-test.com/</string>
    <string name="ws_server_ip_hint">请输入IP地址</string>
    <string name="ws_server_port_hint">请输入端口号</string>
    <string name="ws_server_open">启动服务</string>
    <string name="ws_server_close">关闭服务</string>
    <string name="ws_server_clean">清空日志</string>
    <string name="ws_server_send_hint">请输入发送内容</string>
    <string name="ws_server_send">发送</string>
    <string name="ws_server_no_open">服务未启动</string>

</resources>
