<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_d9d9d9"
        android:padding="8dp"
        android:text="@string/mqtt_github"
        android:textColor="@color/color_3a958d" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/result_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            tools:text="sdasd" />

    </androidx.core.widget.NestedScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/color_d9d9d9" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:text="@string/mqtt_connect_info_title"
        android:textColor="@color/color_3a958d" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <EditText
            android:id="@+id/url_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mqtt_url_hint"
            android:importantForAutofill="no"
            android:inputType="textUri"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/client_id_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mqtt_client_id_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/def_sub_topic_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mqtt_def_sub_topic_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="14sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_d9d9d9" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:text="@string/mqtt_send_info_title"
        android:textColor="@color/color_3a958d" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/send_topic_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/mqtt_send_topic_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/clean_btn"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/selector_btn_mqtt_service"
                android:gravity="center"
                android:text="@string/mqtt_clean"
                android:textColor="@color/white"
                android:textSize="12sp"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/send_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/mqtt_send_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/send_btn"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="10dp"
                android:background="@drawable/selector_btn_mqtt_service"
                android:gravity="center"
                android:text="@string/mqtt_send"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_d9d9d9" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/create_btn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/selector_btn_mqtt_service"
            android:gravity="center"
            android:text="@string/mqtt_create"
            android:textColor="@color/white"
            android:textSize="12sp"
            tools:ignore="ButtonStyle" />

        <TextView
            android:id="@+id/connect_btn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_btn_mqtt_service"
            android:gravity="center"
            android:text="@string/mqtt_connect"
            android:textColor="@color/white"
            android:textSize="12sp"
            tools:ignore="ButtonStyle" />

        <TextView
            android:id="@+id/disconnect_btn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_btn_mqtt_service"
            android:gravity="center"
            android:text="@string/mqtt_disconnect"
            android:textColor="@color/white"
            android:textSize="12sp"
            tools:ignore="ButtonStyle" />

        <TextView
            android:id="@+id/release_btn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_btn_mqtt_service"
            android:gravity="center"
            android:text="@string/mqtt_release"
            android:textColor="@color/white"
            android:textSize="12sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>