<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_d9d9d9"
        android:padding="8dp"
        android:text="@string/ws_server_test"
        android:textColor="@color/color_ff6307" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/ip_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ws_server_ip_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="14sp"
                tools:ignore="UnusedAttribute" />

            <EditText
                android:id="@+id/port_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ws_server_port_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="14sp"
                tools:ignore="UnusedAttribute" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/open_btn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_ff6307"
                android:text="@string/ws_server_open"
                android:textColor="@color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/close_btn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_ff6307"
                android:text="@string/ws_server_close"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/color_d9d9d9" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/content_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/ws_server_send_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="14sp"
            tools:ignore="UnusedAttribute" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/send_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/color_ff6307"
            android:text="@string/ws_server_send"
            android:textColor="@color/white" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/color_d9d9d9" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/log_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                tools:text="sdasd" />

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clean_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:backgroundTint="@color/color_ff6307"
            android:elevation="4sp"
            android:text="@string/ws_server_clean"
            android:textColor="@color/white" />


    </LinearLayout>


</LinearLayout>