<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_d9d9d9"
        android:padding="8dp"
        android:text="@string/ws_github"
        android:textColor="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/url_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/mqtt_url_hint"
            android:importantForAutofill="no"
            android:inputType="textUri"
            android:textSize="14sp"
            tools:ignore="UnusedAttribute" />

        <Button
            android:id="@+id/connect_btn"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/mqtt_connect"
            android:textColor="@color/white" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/send_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/mqtt_send_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="14sp"
            tools:ignore="UnusedAttribute" />

        <Button
            android:id="@+id/send_btn"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/mqtt_send"
            android:textColor="@color/white" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/color_d9d9d9" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/slient_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/mqtt_slient"
            android:backgroundTint="@color/colorPrimary"
            android:textAllCaps="false"
            android:textColor="@color/white"
            tools:targetApi="lollipop" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/unslient_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/mqtt_unslient"
            android:backgroundTint="@color/colorPrimary"
            android:textAllCaps="false"
            android:textColor="@color/white"
            tools:targetApi="lollipop" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/color_d9d9d9" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/result_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                tools:text="sdasd" />

        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/clean_btn"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="60dp"
            android:background="@color/colorPrimary"
            android:elevation="4sp"
            android:text="@string/mqtt_clean"
            android:textColor="@color/white"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/disconnect_btn"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_gravity="end|bottom"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:elevation="4sp"
            android:text="@string/mqtt_disconnect"
            android:textColor="@color/white"
            tools:targetApi="lollipop" />

    </FrameLayout>


</LinearLayout>